# upextract

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
demoasset/: test.unitypackage
src/: extract.rs  inspect.rs  list.rs  main.rs
